<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_add_client"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.moish.carrentforcompany.controller.AddClientActivity">

        <EditText
            android:id="@+id/IdEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="number" />


        <EditText
            android:id="@+id/FirstNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

    <EditText
    android:id="@+id/LastNameEditText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/last_name"
    android:inputType="textPersonName" />

    <EditText
        android:id="@+id/EmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName" />

        <EditText
            android:id="@+id/PhoneEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_card_number" />

            <EditText
                android:id="@+id/creditCardNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/addClientButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_client" />

    </LinearLayout>



