<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.moish.carrentforcompany.controller.AddCarModelActivity">


    <EditText
        android:id="@+id/CarCode_idText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/car_code_id"
        android:inputType="number" />


    <EditText
        android:id="@+id/CarModelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/car_model"
        android:inputType="number" />

    <EditText
        android:id="@+id/KilometersTraveledText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/kilometers"
        android:inputType="number" />

    <EditText
        android:id="@+id/CarsFixedBranchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/branch"
        android:inputType="number" />


    <Button
        android:id="@+id/addCarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_car_button" />

</LinearLayout>






